# cargo-rush

./: .gitignore  Cargo.toml  README.md  run.sh
examples/libtest/: Cargo.toml
examples/libtest/src/: lib  lib.rs
src/: main.rs
