[package]
name = "cargo-rush"
version = "0.0.1"
authors = ["CryptoPatrick <cryptopatrick@gmail.com>"]
edition = "2021"
description = "cargo run whatever is on the operating system clipboard."
documentation = "https://docs.rs/cargo-rush"
homepage = "https://github.com/cryptopatrick/cargo-rush"
repository = "https://github.com/cryptopatrick/cargo-rush"
readme = "README.md"
keywords = ["cargo", "clipboard", "memory"]
license = "Unlicense OR MIT"
autotests = false

[dependencies]
argh = "0.1"
clipboard = "0.5.0"
